<?xml version="1.0" encoding="UTF-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_done"
        android:icon="@drawable/action_done"
        android:orderInCategory="100"
        android:title="@string/done"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_undone"
        android:icon="@drawable/action_undone"
        android:orderInCategory="100"
        android:title="@string/cancel"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/action_delete"
        android:orderInCategory="100"
        android:title="@string/delete"
        android:visible="true"
        app:showAsAction="always" />

</menu>